second css grid project

--- a/index.html
+++ b/index.html
@@ -5,43 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <script src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <title>GridBiz</title>
 </head>
 <body>
         <div class="wrapper">
-            <div>
-                Lorem ipsum dolor sit.
-            </div>
-            <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, id vel illo consequuntur iusto adipisci soluta eum earum dolore sed. Reprehenderit laudantium similique suscipit cum quis, magnam necessitatibus quibusdam molestiae. Id laborum sed corporis sapiente mollitia repellendus, sequi voluptate qui!
-            </div>
-            <div class="nested">
-                <div>lorem</div>
-                <div>lorem</div>
-                <div>lorem</div>
-                <div>lorem</div>
-                <div>lorem</div>
-                <div>lorem</div>
-                <div>lorem</div>
-                <div>lorem</div>
-                <div>lorem</div>
-                
-            </div>
-            <div>
-                Lorem ipsum dolor sit.
-            </div>
-            <div>
-                Lorem ipsum dolor sit.
-            </div>
-            <div>
-                Lorem ipsum dolor sit.
-            </div>
-            <div>
-                Lorem ipsum dolor sit.
-            </div>
-            <div>
-                Lorem ipsum dolor sit.
-            </div>
+            <!-- navigation -->
+            <nav class="main-nav">
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                     <li>
+                        <a href="#">About</a>
+                    </li>
+                     <li>
+                        <a href="#">Services</a>
+                    </li>
+                     <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+
+
+            <!-- top container -->
+
+            <section class="top-container">
+                <header class="showcase">
+                    <h1>your web presence</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium atque corporis pariatur rem quis labore!</p>
+                    <a href="#" class="btn">Read More</a>
+                </header>
+                <div class="top-box top-box-a">
+                    <h4>Membership</h4>
+                    <p class="price">$199/mo</p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+                 <div class="top-box top-box-b">
+                    <h4>Pro Membership</h4>
+                    <p class="price">$299/mo</p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+            </section>
+
+            <!-- Boxes section -->
+            <section class="boxes">
+                <div class="box">
+                    <i class="fas fa-chart-pie fa-5x"></i>
+                    <h3>Analytics</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum?</p>
+                </div>
+                  <div class="box">
+                    <i class="fas fa-globe fa-5x"></i>
+                    <h3>Marketing</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum?</p>
+                </div>
+                 <div class="box">
+                    <i class="fas fa-cog fa-5x"></i>
+                    <h3>Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum?</p>
+                </div>
+                  <div class="box">
+                    <i class="fas fa-users fa-5x"></i>
+                    <h3>Support</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum?</p>
+                </div>
+            </section>
+
+            <!-- Info Section -->
+
+            <section class="info">
+                <img src="img/pic1.jpeg" alt="">
+                <div>
+                    <h2>Your business on the web</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quod asperiores magnam esse quaerat? Distinctio, maxime quae eaque culpa pariatur quisquam at recusandae delectus deserunt, et saepe temporibus iste magni.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+            </section>
+
+
+            <!-- Portfolio  -->
+
+            <section class="portofolio">
+                <img src="https://source.unsplash.com/random/200x200" alt="">
+                <img src="https://source.unsplash.com/random/201x200" alt="">
+                <img src="https://source.unsplash.com/random/202x200" alt="">
+                <img src="https://source.unsplash.com/random/203x200" alt="">
+                <img src="https://source.unsplash.com/random/204x200" alt="">
+                 <img src="https://source.unsplash.com/random/205x200" alt="">
+                <img src="https://source.unsplash.com/random/206x200" alt="">
+            </section>
+
+            <!-- Footer -->
+            <footer>
+                <p>GridBiz &copy; 2019</p>
+            </footer>
         </div>
+<!-- wrapper ends -->
 </body>
 </html>
