Mind game first adjustment (unfinished)

--- a/index.html
+++ b/index.html
@@ -5,103 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <title>GridBiz</title>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous">
+
+    <title>CardGame</title>
 </head>
 <body>
-        <div class="wrapper">
-            <!-- navigation -->
-            <nav class="main-nav">
-                <ul>
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                     <li>
-                        <a href="#">About</a>
-                    </li>
-                     <li>
-                        <a href="#">Services</a>
-                    </li>
-                     <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-            </nav>
+    <div class="wrapper">
+<section id="overlay">
+<div class="content">
+    <h1>Congurlations</h1>
+    <p>you have won</p>
+    <button id="play-again">play again</button>
+</div>
+    
+</section>
+        <section class="boxes">
+       
+            <div class="box box-1"><i class="fas fa-bicycle"></i></div>
+            <div class="box box-2"><i class="fas fa-allergies"></i></div>
+            <div class="box box-3"><i class="fas fa-ankh"></i></div>
+            <div class="box box-4"><i class="fas fa-apple-alt"></i></div>
+            <div class="box box-5"><i class="fab fa-affiliatetheme"></i></div>
+            <div class="box box-6"><i class="fab fa-adobe"></i></div>
+            <div class="box box-7"><i class="fab fa-android"></i></div>
+            <div class="box box-8"><i class="fas fa-arrow-alt-circle-down"></i></div>
+            <div class="box box-9"><i class="fas fa-arrow-alt-circle-down"></i></div>
+            <div class="box box-10"><i class="fas fa-bicycle"></i></div>
+            <div class="box box-11"><i class="fas fa-allergies"></i></div>
+            <div class="box box-12"><i class="fas fa-ankh"></i></div>
+            <div class="box box-13"><i class="fas fa-apple-alt"></i></div>
+            <div class="box box-14"><i class="fab fa-affiliatetheme"></i></div>
+            <div class="box box-15"><i class="fab fa-adobe"></i></div>
+            <div class="box box-16"><i class="fab fa-android"></i></div>
+        </section>
+    </div>
 
-
-            <!-- top container -->
-
-            <section class="top-container">
-                <header class="showcase">
-                    <h1>your web presence</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium atque corporis pariatur rem quis labore!</p>
-                    <a href="#" class="btn">Read More</a>
-                </header>
-                <div class="top-box top-box-a">
-                    <h4>Membership</h4>
-                    <p class="price">$199/mo</p>
-                    <a href="#" class="btn">Buy Now</a>
-                </div>
-                 <div class="top-box top-box-b">
-                    <h4>Pro Membership</h4>
-                    <p class="price">$299/mo</p>
-                    <a href="#" class="btn">Buy Now</a>
-                </div>
-            </section>
-
-            <!-- Boxes section -->
-            <section class="boxes">
-                <div class="box">
-                    <i class="fas fa-chart-pie fa-5x"></i>
-                    <h3>Analytics</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum?</p>
-                </div>
-                  <div class="box">
-                    <i class="fas fa-globe fa-5x"></i>
-                    <h3>Marketing</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum?</p>
-                </div>
-                 <div class="box">
-                    <i class="fas fa-cog fa-5x"></i>
-                    <h3>Development</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum?</p>
-                </div>
-                  <div class="box">
-                    <i class="fas fa-users fa-5x"></i>
-                    <h3>Support</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum?</p>
-                </div>
-            </section>
-
-            <!-- Info Section -->
-
-            <section class="info">
-                <img src="img/pic1.jpeg" alt="">
-                <div>
-                    <h2>Your business on the web</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quod asperiores magnam esse quaerat? Distinctio, maxime quae eaque culpa pariatur quisquam at recusandae delectus deserunt, et saepe temporibus iste magni.</p>
-                    <a href="#" class="btn">Learn More</a>
-                </div>
-            </section>
-
-
-            <!-- Portfolio  -->
-
-            <section class="portofolio">
-                <img src="https://source.unsplash.com/random/200x200" alt="">
-                <img src="https://source.unsplash.com/random/201x200" alt="">
-                <img src="https://source.unsplash.com/random/202x200" alt="">
-                <img src="https://source.unsplash.com/random/203x200" alt="">
-                <img src="https://source.unsplash.com/random/204x200" alt="">
-                 <img src="https://source.unsplash.com/random/205x200" alt="">
-                <img src="https://source.unsplash.com/random/206x200" alt="">
-            </section>
-
-            <!-- Footer -->
-            <footer>
-                <p>GridBiz &copy; 2019</p>
-            </footer>
-        </div>
-<!-- wrapper ends -->
+<script src="JS/script.js"></script>
 </body>
 </html>
