--- a/index.html
+++ b/index.html
@@ -16,12 +16,26 @@
 <div class="content">
     <h1>Congurlations</h1>
     <p>you have won</p>
+    <p>No of moves: <span id="result">0</span> </p>
+    <p  id ="resultStar"></p>
     <button id="play-again">play again</button>
 </div>
     
 </section>
-        <section class="boxes">
-       
+        <section class="stats" id="stats">
+            <h3>Matching game</h3>
+            <p>
+                <span class="stars">
+                <i class="fas fa-star"></i> 
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                </span>
+                <span id="moves">0</span> Moves 
+                <span id="refresh"><i class="fas fa-redo"></i></span>
+            </p>
+
+        </section>
+            <section class="boxes">
             <div class="box box-1"><i class="fas fa-bicycle"></i></div>
             <div class="box box-2"><i class="fas fa-allergies"></i></div>
             <div class="box box-3"><i class="fas fa-ankh"></i></div>
